--- a/bon_restau/package.json
+++ b/bon_restau/package.json
@@ -16,7 +16,11 @@
     "dependencies": {
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "mongoose": "^5.11.8"
+        "mongoose": "^5.11.8",
+        "react-redux": "^8.0.1",
+        "react-router-dom": "^6.3.0",
+        "react-scripts": "^5.0.1",
+        "redux": "^4.2.0"
     },
     "devDependencies": {
         "concurrently": "^5.3.0",
